# subtitle-translator-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  run_gradio.py  sample.srt  setup.sh
outputs/: translated.srt
src/: api.py  srt_translator.py  utils.py
src/subtitle_translator_ai/: __init__.py  cli.py  gradio_app.py  srt_translator.py  utils.py
